ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: dhg-rateauto-dev-ingress
  namespace: dhg-rateauto-dev-namespace
  annotations:
    kubernetes.io/ingress.class: "gce"
    networking.gke.io/managed-certificates: dhg-rateauto-dev-cert
    kubernetes.io/ingress.global-static-ip-name: "dhg-rateauto-dev-static-ip"
    kubernetes.io/ingress.allow-http: "false"
    networking.gke.io/v1beta1.FrontendConfig: dhg-rateauto-dev-frontend-config

spec:
  rules:
    - host: gcpcloudhub.shop
      http:
        paths:

          # Fee Sources
          - path: /feesources/api
            pathType: Prefix
            backend:
              service:
                name: dhg-rateauto-fee-sources-service
                port:
                  number: 5000

          - path: /feesources
            pathType: Prefix
            backend:
              service:
                name: dhg-rateauto-fee-sources-service
                port:
                  number: 80

          # NextGen Data
          - path: /nextgen-data/api
            pathType: Prefix
            backend:
              service:
                name: dhg-rateauto-nextgen-data-service
                port:
                  number: 5000

          - path: /nextgen-data
            pathType: Prefix
            backend:
              service:
                name: dhg-rateauto-nextgen-data-service
                port:
                  number: 80
